--- a/quiz/templates/Quizapp/intermediate.html
+++ b/quiz/templates/Quizapp/intermediate.html
@@ -5,6 +5,7 @@
 {% block content %}
 <div class="questions mt-5">
     <h1>Intermediate Python Questions</h1>
+    <h5>{{result}}</h5>
     <form action="" method='POST'>
         {% csrf_token %}
         <ol>
